# isoxya-plugin-crawler-html

./: .dockerrepo  Dockerfile  LICENSE.dependencies.txt  README.md  cabal.config  cabal.project.freeze  docker-compose.yml  docker-compose.yml.example  isoxya-plugin-crawler-html.cabal  isx-pick-crawler-html.cabal  isx-plug-crawler-html.cabal  isx-plugin-crawler-html.cabal
ci/: Dockerfile
misc/streams/stable/: docker-compose.yml
misc/streams/testing/: docker-compose.yml
misc/streams/unstable/: docker-compose.yml
pkg/: Dockerfile
src/ISX/Pick/CrawlerHTML/: Parser.hs  Route.hs
src/ISX/Pick/CrawlerHTML/Resource/: Common.hs
src/ISX/Pick/CrawlerHTML/Zone/Common/: Apex.hs  Data.hs
src/ISX/Plug/: CrawlerHTML.hs
src/ISX/Plug/CrawlerHTML/: Core.hs  Init.hs  Parser.hs  Resource.hs  Route.hs  Types.hs
src/ISX/Plug/CrawlerHTML/Resource/: Common.hs
src/ISX/Plug/CrawlerHTML/Zone/: Apex.hs  Data.hs
src/ISX/Plug/CrawlerHTML/Zone/Common/: Apex.hs  Data.hs
src/ISX/Plugin/CrawlerHTML/: Parser.hs  Route.hs
src/ISX/Plugin/CrawlerHTML/Resource/: Common.hs
src/ISX/Plugin/CrawlerHTML/Zone/Common/: Apex.hs  Data.hs
src/Isoxya/Plugin/: CrawlerHTML.hs
src/Isoxya/Plugin/CrawlerHTML/: Core.hs  Init.hs  Parser.hs  Resource.hs  Type.hs  Types.hs
src/Isoxya/Plugin/CrawlerHTML/Endpoint/: Apex.hs  Data.hs
test/ISX/: Factory.hs  Test.hs
test/ISX/Pick/CrawlerHTML/: ParserSpec.hs
test/ISX/Pick/CrawlerHTML/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/ISX/Plug/CrawlerHTML/: ParserSpec.hs  Test.hs
test/ISX/Plug/CrawlerHTML/Zone/: ApexSpec.hs  DataSpec.hs
test/ISX/Plug/CrawlerHTML/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/ISX/Plugin/CrawlerHTML/: ParserSpec.hs
test/ISX/Plugin/CrawlerHTML/Zone/Common/: ApexSpec.hs  DataSpec.hs
test/Isoxya/Plugin/CrawlerHTML/: ParserSpec.hs  Test.hs
test/Isoxya/Plugin/CrawlerHTML/Endpoint/: ApexSpec.hs  DataSpec.hs
test/fixture/links/example.com/: _base.json  _rel_nofollow.json  index.html.json
test/fixture/links/www.tiredpixel.com/: index.html.json
test/fixture/links/xkcd.com/: index.html.json
test/fixture/pages/example.com/: _base  _meta_robots  _rel_nofollow
test/fixture/results/www.pavouk.tech/: index.html.json
