cabal-version:          2.4
name:                   isx-pick-crawler-html
version:                1.1
synopsis:               Isoxya Pickax Crawler HTML
license:                BSD-3-Clause
license-file:           LICENSE
author:                 Pavouk OÜ
maintainer:             en@pavouk.tech
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    build-depends:
        base-noprelude                  ==  4.12.*,
        relude
    mixins:
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library common
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Aeson
        PVK.Com.API.Ext.URI
        PVK.Com.API.Req
        PVK.Com.API.Res
        PVK.Com.API.Resource.CommonError
        PVK.Com.API.Resource.ISXPick
        PVK.Com.API.Resource.ISXPickSnap
        PVK.Com.API.Zone.Common.Error
    build-depends:
        aeson,
        base64-bytestring,
        network-uri,
        snap-core,
        snap-extras,
        unordered-containers
    hs-source-dirs:
        lib/common/src

library isx-pick-crawler-html-int
    import:             shared-properties
    exposed-modules:
        ISX.Pick.CrawlerHTML.Parser
        ISX.Pick.CrawlerHTML.Route
        ISX.Pick.CrawlerHTML.Zone.Common.Apex
        ISX.Pick.CrawlerHTML.Zone.Common.Data
    other-modules:
        ISX.Pick.CrawlerHTML.Resource.Common
    build-depends:
        common,
        --
        aeson,
        containers,
        HandsomeSoup,
        hxt,
        network-uri,
        snap-core,
        snap-extras,
        text,
        time
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-pick-crawler-html
    import:             shared-properties
    main-is:            Main.hs
    build-depends:
        common,
        isx-pick-crawler-html-int,
        --
        snap-server
    hs-source-dirs:
        src/ISX/Pick/CrawlerHTML/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-test
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Test
    build-depends:
        common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        directory,
        filepath,
        hspec                           ==  2.*,
        http-link-header,
        lens,
        lens-aeson,
        snap-core
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common/test

test-suite isx-pick-crawler-html-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Factory
        ISX.Pick.CrawlerHTML.ParserSpec
        ISX.Pick.CrawlerHTML.Zone.Common.ApexSpec
        ISX.Pick.CrawlerHTML.Zone.Common.DataSpec
        ISX.Test
    build-depends:
        common,
        common-test,
        isx-pick-crawler-html-int,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        unordered-containers,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
