cabal-version:          3.0
name:                   isx-plug-crawler-html
version:                0.0.0
synopsis:               Isoxya plugin: Crawler HTML
license:                BSD-3-Clause
author:                 Nic Williams <tp@tiredpixel.com>
maintainer:             Nic Williams <tp@tiredpixel.com>
build-type:             Simple
--------------------------------------------------------------------------------
common common-properties
    build-depends:
        base                            ==  4.13.*,
        relude
    mixins:
        base                            hiding (Prelude),
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library lib-common-ce
    import:             common-properties
    exposed-modules:
        TPX.Com.Isoxya.PlugProc
        TPX.Com.Isoxya.Snap.PlugProc
        TPX.Com.Snap.CoreUtils
        TPX.Com.Snap.Main
        TPX.Com.URI
    other-modules:
        TPX.Com.Cursor
    build-depends:
        aeson,
        base64-bytestring,
        bytestring,
        http-conduit,
        network-uri,
        regex-compat,
        safe,
        snap-core,
        snap-extras,
        snap-server,
        time,
        unix,
        unordered-containers,
    hs-source-dirs:
        lib/common-ce/src
--------------------------------------------------------------------------------
library lib-isx-plug-crawler-html
    import:             common-properties
    exposed-modules:
        ISX.Plug.CrawlerHTML
        ISX.Plug.CrawlerHTML.Core
    other-modules:
        Paths_isx_plug_crawler_html
        --
        ISX.Plug.CrawlerHTML.Init
        ISX.Plug.CrawlerHTML.Parser
        ISX.Plug.CrawlerHTML.Resource
        ISX.Plug.CrawlerHTML.Types
        ISX.Plug.CrawlerHTML.Zone.Apex
        ISX.Plug.CrawlerHTML.Zone.Data
    build-depends:
        lib-common-ce,
        --
        aeson,
        containers,
        HandsomeSoup,
        hxt,
        lens,
        network-uri,
        snap,
        snap-core,
        snap-extras,
        text,
        time,
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-plug-crawler-html
    import:             common-properties
    main-is:            CrawlerHTML.hs
    other-modules:
        Paths_isx_plug_crawler_html
    build-depends:
        lib-common-ce,
        lib-isx-plug-crawler-html,
        --
        lens,
        snap,
    hs-source-dirs:
        src/ISX/Plug/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library lib-common-ce-test
    import:             common-properties
    exposed-modules:
        TPX.Com.Snap.Test
    other-modules:
        TPX.Com.Snap.TestUtils
    build-depends:
        lib-common-ce,
        --
        aeson,
        base64-bytestring,
        bytestring,
        containers,
        directory,
        filepath,
        hspec                           ==  2.*,
        hspec-core,
        hspec-snap,
        http-link-header,
        lens,
        lens-aeson,
        mtl,
        network-uri,
        process,
        snap-core,
        text,
        unordered-containers,
        vector,
    hs-source-dirs:
        lib/common-ce/test
--------------------------------------------------------------------------------
test-suite test-isx-plug-crawler-html
    import:             common-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Plug.CrawlerHTML.ParserSpec
        ISX.Plug.CrawlerHTML.Test
        ISX.Plug.CrawlerHTML.Zone.ApexSpec
        ISX.Plug.CrawlerHTML.Zone.DataSpec
    build-depends:
        lib-common-ce,
        lib-common-ce-test,
        lib-isx-plug-crawler-html,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
    default-extensions:
        NoImplicitPrelude
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
