cabal-version:          3.0
name:                   isx-plugin-crawler-html
version:                1.1
synopsis:               Isoxya plugin: Crawler HTML
license:                NONE
license-file:           LICENSE
author:                 tiredpixel
maintainer:             tp@tiredpixel.com
build-type:             Simple
extra-source-files:     README.md
--------------------------------------------------------------------------------
common shared-properties
    build-depends:
        base-noprelude                  ==  4.13.*,
        relude
    mixins:
        relude                          (Relude as Prelude)
    default-language:   Haskell2010
    default-extensions:
        OverloadedStrings
    ghc-options:
        -Wall
        -ddump-minimal-imports
--------------------------------------------------------------------------------
library common
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Aeson
        PVK.Com.API.Ext.URI
        PVK.Com.API.Req
        PVK.Com.API.Res
        PVK.Com.API.Resource.CommonError
        PVK.Com.API.Resource.ISXPick
        PVK.Com.API.Resource.ISXPickSnap
        PVK.Com.API.Zone.Common.Error
    build-depends:
        aeson,
        base64-bytestring,
        network-uri,
        snap-core,
        snap-extras,
        unordered-containers
    hs-source-dirs:
        lib/common/src

library isx-plugin-crawler-html-int
    import:             shared-properties
    exposed-modules:
        ISX.Plugin.CrawlerHTML.Parser
        ISX.Plugin.CrawlerHTML.Route
        ISX.Plugin.CrawlerHTML.Zone.Common.Apex
        ISX.Plugin.CrawlerHTML.Zone.Common.Data
    other-modules:
        ISX.Plugin.CrawlerHTML.Resource.Common
    build-depends:
        common,
        --
        aeson,
        containers,
        HandsomeSoup,
        hxt,
        network-uri,
        snap-core,
        snap-extras,
        text,
        time
    hs-source-dirs:
        src
--------------------------------------------------------------------------------
executable isx-plugin-crawler-html
    import:             shared-properties
    main-is:            Main.hs
    build-depends:
        common,
        isx-plugin-crawler-html-int,
        --
        snap-server
    hs-source-dirs:
        src/ISX/Plugin/CrawlerHTML/Bin
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
library common-test
    import:             shared-properties
    exposed-modules:
        PVK.Com.API.Test
    build-depends:
        common,
        --
        aeson,
        base64-bytestring,
        bytestring,
        directory,
        filepath,
        hspec                           ==  2.*,
        http-link-header,
        lens,
        lens-aeson,
        snap-core
    mixins:
        relude                          (Relude.Unsafe)
    hs-source-dirs:
        lib/common/test

test-suite isx-plugin-crawler-html-test
    import:             shared-properties
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    other-modules:
        ISX.Factory
        ISX.Plugin.CrawlerHTML.ParserSpec
        ISX.Plugin.CrawlerHTML.Zone.Common.ApexSpec
        ISX.Plugin.CrawlerHTML.Zone.Common.DataSpec
        ISX.Test
    build-depends:
        common,
        common-test,
        isx-plugin-crawler-html-int,
        --
        containers,
        hspec                           ==  2.*,
        network-uri,
        text,
        unordered-containers,
        vector
    hs-source-dirs:
        test
    build-tool-depends:
        hspec-discover:hspec-discover   ==  2.*
    ghc-options:
        -threaded
--------------------------------------------------------------------------------
